# 508-workflows

./: .env.example  DEVELOPMENT.md  ENVIRONMENT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
.superset/: config.json
apps/api/src/five08/backend/: api.py  auth.py
apps/discord_bot/: README.md  pyproject.toml
apps/discord_bot/src/five08/discord_bot/: bot.py  config.py  main.py
apps/discord_bot/src/five08/discord_bot/cogs/: admin_login.py  crm.py  jobs.py  migadu.py
apps/discord_bot/src/five08/discord_bot/utils/: audit.py  bot_http.py  healthcheck.py  internal_api.py
apps/worker/: README.md  pyproject.toml
apps/worker/src/five08/: jobcli.py
apps/worker/src/five08/backend/: api.py
apps/worker/src/five08/worker/: actors.py  config.py  consumer.py  jobs.py  mailbox_resume_ingest.py  masking.py  models.py
apps/worker/src/five08/worker/crm/: document_processor.py  docuseal_processor.py  intake_form_processor.py  people_sync.py  processor.py  resume_profile_processor.py  skills_extractor.py
apps/worker/src/five08/worker/migrations/versions/: 20260304_0200_create_discord_members_table.py
scripts/: profile_source_debug.py
tests/: conftest.py
tests/integration/: test_candidate_search_e2e.py
tests/unit/: test_authentik_client.py  test_backend_api.py  test_bot.py  test_bot_http.py  test_candidate_search.py  test_crm.py  test_crm_cli.py  test_crm_contacts.py  test_crm_create_sso_user.py  test_crm_mark_id_verified.py  test_crm_normalization.py  test_discord_audit.py  test_discord_bot_client.py  test_discord_command_metadata.py  test_discord_webhook.py  test_document_text.py  test_docuseal_client.py  test_docuseal_processor.py  test_healthcheck.py  test_intake_form_processor.py  test_internal_api.py  test_jobcli.py  test_jobs.py  test_pdf.py  test_resume_extractor.py  test_resume_profile_processor.py  test_shared_audit.py  test_shared_settings.py  test_skills_extractor.py  test_worker_actors.py  test_worker_config.py  test_worker_mailbox_resume_ingest.py  test_worker_models.py  test_worker_processor.py
