[project]
name = "five08-monorepo"
version = "0.1.0"
description = "508.dev monorepo for Discord bot and job processing."
requires-python = ">=3.12"
dependencies = [
    "discord_bot",
    "api",
    "worker",
    "five08",
]

[tool.uv]
package = false

[tool.uv.sources]
discord_bot = { workspace = true }
api = { workspace = true }
worker = { workspace = true }
five08 = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/discord_bot",
    "apps/api",
    "apps/worker",
    "packages/shared",
]

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3.0",
    "pytest-mock~=3.14",
    "coverage~=7.6",
    "ruff~=0.15.0",
    "mypy~=1.14",
    "watchfiles>=1.1.1",
    "types-requests>=2.32.4.20250913",
    "pre-commit>=3.7",
    "pre-commit-uv",
    "freezegun>=1.5.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers"
markers = [
    "e2e: end-to-end tests requiring a live PostgreSQL connection",
]

[tool.coverage.run]
source = ["five08"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "apps/discord_bot/src",
    "apps/api/src",
    "apps/worker/src",
    "packages/shared/src",
]
