[project]
name = "worker"
version = "0.1.0"
description = "Webhook ingest and background processing worker for 508.dev"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    # Pin intentionally for reproducible broker behavior across worker/api images.
    "dramatiq[redis]==2.0.1",
    "httpx>=0.28.1",
    "openai>=2.0.0",
    "pydantic~=2.10",
    "pydantic-settings~=2.8",
    "python-docx>=1.2.0",
    "redis>=6.4.0",
    "requests~=2.31",
    "psycopg[binary]>=3.2.5",
    "five08",
]

[tool.uv.sources]
five08 = { workspace = true }

[project.scripts]
worker-consumer = "five08.worker.consumer:run"
jobsctl = "five08.jobcli:run"

[tool.alembic]
script_location = "src/five08/worker/migrations"
prepend_sys_path = ["src"]
file_template = "%%(rev)s_%%(slug)s"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/five08"]
